2006-01-03  Justin Garcia  <justin.garcia@apple.com>
        
        New/updated layout tests for:
        <http://bugzilla.opendarwin.org/show_bug.cgi?id=4904>
        Bug with baseOffset and extentOffset in selections (for writely.com)
        <rdar://problem/4259818>
        selection object incorrect after double-clicking a word

        * editing/selection/anchor-focus1-expected.txt: Added.
        * editing/selection/anchor-focus1.html: Added.
        * editing/selection/anchor-focus2-expected.txt: Added.
        * editing/selection/anchor-focus2.html: Added.
        * editing/selection/anchor-focus3-expected.txt: Added.
        * editing/selection/anchor-focus3.html: Added.
        * editing/selection/getRangeAt-expected.txt: Added.
        * editing/selection/getRangeAt.html: Added.
        * editing/selection/unrendered-001-expected.txt:

2006-01-03  Anders Carlsson  <andersca@mac.com>

        Reviewed by Maciej.

        - Add test for http://bugzilla.opendarwin.org/show_bug.cgi?id=5378
        createDocument fails with DOM Exception 5 when passed empty qname
        
        * dom/html/level2/core/createDocument08-expected.txt:
        * dom/xhtml/level2/core/createDocument08-expected.txt:
        These now fail.
        
        * fast/dom/createDocument-empty-expected.txt: Added.
        * fast/dom/createDocument-empty.html: Added.

2006-01-03  Anders Carlsson  <andersca@mac.com>

        Reviewed by Darin.

        - Add tests for http://bugzilla.opendarwin.org/show_bug.cgi?id=5177
        Javascript cloneNode(deep) does not clone form elements correctly
        
        * fast/dom/clone-node-form-elements-expected.txt: Added.
        * fast/dom/clone-node-form-elements.html: Added.

2006-01-03  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by Eric.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=5609
          XSLT document() doesn't handle relative paths
        
        * fast/xsl/xslt-relative-path.xml: Added.