@@ -1,0 +1,22 @@
+<html>
+<head>
+    <script>
+    function runTests() {
+        if (window.layoutTestController)
+            layoutTestController.dumpAsText();
+            
+        var l = document.getElementById('theform');
+        l.submit()
+    }
+    </script>
+</head>
+<body onload="runTests()">
+<form id="theform" action="about:blank" target="theframe">
+<input type="submit">
+<iframe name="theframe">
+</iframe>
+<div>
+This tests that frame targets work. If this text is successful, this text should still be shown.
+</div>
+</body>
+</html>
